examples/test/testpolicy417.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy417
  namespace: namespace47
spec:
  podSelector:
    matchLabels:
      key49: value27
      key31: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value40
          key44: value35
      podSelector:
        matchLabels:
          key25: value5
          key14: value13
